--- a/catalog/view/theme/default/template/product/manufacturer_info.twig
+++ b/catalog/view/theme/default/template/product/manufacturer_info.twig
@@ -82,7 +82,10 @@
             <div class="image"><a href="{{ product.href }}"><img src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" class="img-responsive" /></a></div>
             <div>
               <div class="caption">
-                <h4><a href="{{ product.href }}">{{ product.name }}</a></h4>
+              
+                <h4><a href="{{ product.href }}">{{ product.name }}</a> {% if product.super %}
+                <div class="super-product-badge">🔥 Супер товар</div>
+                {% endif %}</h4>
                 <p>{{ product.description }}</p>
                 {% if product.price %}
                 <p class="price"> {% if not product.special %}
