--- a/catalog/view/theme/default/template/product/manufacturer_info.twig
+++ b/catalog/view/theme/default/template/product/manufacturer_info.twig
@@ -27,6 +27,9 @@
       {% if products %}
       <div class="row">
         <div class="col-md-2 col-sm-6 hidden-xs">
+        123
+        <a href="{{ manufacturer_href }}&super=1" class="btn btn-primary">Супер товари</a>
+        <a href="{{ manufacturer_href }}" class="btn btn-secondary">Усі товари</a>
           <div class="btn-group btn-group-sm">
             <button type="button" id="list-view" class="btn btn-default" data-toggle="tooltip" title="{{ button_list }}"><i class="fa fa-th-list"></i></button>
             <button type="button" id="grid-view" class="btn btn-default" data-toggle="tooltip" title="{{ button_grid }}"><i class="fa fa-th"></i></button>
