--- a/admin/view/template/extension/module/super_products.twig
+++ b/admin/view/template/extension/module/super_products.twig
@@ -15,6 +15,12 @@
       <div class="panel-heading"><h3 class="panel-title">{{ text_edit }}</h3></div>
       <div class="panel-body">
         <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-super-products" class="form-horizontal">
+        <div class="form-group">
+        <label class="col-sm-2 control-label" for="input-name">{{ entry_name }}</label>
+        <div class="col-sm-10">
+        <input type="text" name="name" value="Супер товари" placeholder="123" id="input-name" class="form-control" />
+        </div>
+        </div>
           <div class="form-group">
             <label class="col-sm-2 control-label">{{ entry_limit }}</label>
             <div class="col-sm-10">
